correct ui layout bugs

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -291,7 +291,7 @@ h6 {
   }
   50% {
     opacity: 1;
-    filter: brightness(1.2);
+    filter: brightness(1.3);
   }
   100% {
     opacity: 0.7;
